--- a/src/sales.css
+++ b/src/sales.css
@@ -2,6 +2,10 @@
     font-family: 'Noto-normal', sans-serif;
 }
 
+.top-business {
+    margin-top: 150px;
+}
+
 .business-hero, .business-info {
     max-width: calc(100% - 360px); /* 180px on each side */
     margin: 0 auto 0;
