--- a/src/style.css
+++ b/src/style.css
@@ -465,15 +465,16 @@ header {
 header > a {
   display: flex;
   font-family: 'Aboreto', sans-serif;
+  align-items: center;
   color: #fff;
   text-decoration: none;
 }
 
 header > a > h1 {
   display: flex;
-  align-items: start;
+  align-items: center;
   width: 100%;
-  gap: 5px;
+  gap: 15px;
 }
 
 .menu-wrapper {
