--- a/src/sales.css
+++ b/src/sales.css
@@ -1,6 +1,27 @@
-* {
-    font-family: 'Noto-normal', sans-serif;
-}
+@font-face {
+    font-family: 'Aboreto';
+    src: url('./assets/fonts/Aboreto-Regular.ttf');
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Corm';
+    src: url('./assets/fonts/CormorantInfant-Light.ttf');
+    font-weight: 100;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Noto-normal';
+    src: url('./assets/fonts/NotoSerifJP-ExtraLight.otf');
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Sara';
+    src: url('./assets/fonts/Sarala-Regular.ttf');
+    font-display: swap;
+  }
 
 .top-business {
     margin-top: 150px;
